@@ -7,6 +7,9 @@
 
 <ul>
 
+	<li>The mxmlLoad*() functions could leak a node on an
+	error (STR #27)</li>
+
 	<li>The mxml_vsnprintf() function could get in an infinite
 	loop on a buffer overflow (STR #25)</li>
 
